# legion

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  release.toml
.claude-plugin/: marketplace.json
.claude/agents/: dashboarder.md  issue-writer.md  orchestrator.md  porter.md  reviewer.md  rust.md
.claude/hooks/: ensure-serve.sh
.claude/workflows/: wave2.js
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
app/: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
app/.rafters/: config.rafters.json
app/.rafters/output/: rafters.css  rafters.ts
app/.rafters/tokens/: breakpoint.rafters.json  color.rafters.json  depth.rafters.json  focus.rafters.json  motion.rafters.json  radius.rafters.json  semantic.rafters.json  shadow.rafters.json  spacing.rafters.json  typography-composite.rafters.json  typography.rafters.json
app/src/: api.ts  main.ts  render.ts
app/src/components/ui/: badge.classes.ts  badge.element.ts  button.classes.ts  button.element.ts  card.classes.ts  card.element.ts  container.classes.ts  container.element.ts  grid.classes.ts  grid.element.ts  typography.classes.ts  typography.element.ts
app/src/lib/primitives/: fill-resolver.ts  rafters-element.ts  slot.ts  types.ts
app/src/styles/: app.css
docs/decisions/: 2026-05-31-spec-revision-protocol.md  2026-05-board-derived-goal.md  2026-05-grep-enforcement-stays-in-hooks.md  2026-05-watch-pty-env-audit.md  2026-06-02-grep-blocking-is-operator-permissions.md
docs/plans/: 2026-06-14-document-governance.md  2026-06-refactor-audit.md  2026-07-14-stop-gate-background-and-fixloop-doctrine.md
docs/site/: architecture.md  cli-reference.md  concepts.md  getting-started.md  llms-full.txt  llms.txt  plugin-guide.md
plugin/: .mcp.json  CHANGELOG.md
plugin/.claude-plugin/: .mcp.json  plugin.json
plugin/agents/: changelog.md  legion-explore.md  legion-prime.md  legion-review.md
plugin/channel/: event-bridge.ts  index.ts  sse-client.ts
plugin/commands/: checkpoint.md  legion-release.md  migrate-memory.md  snooze.md
plugin/hooks/: _legion-covered.sh  _legion-daemon-supervisor.sh  _legion-indexed.sh  _legion-prequery.sh  _legion-warn.sh  bullpen-check.sh  hooks.json  identity-chain-load.sh  mark-work.sh  no-bullshit.sh  no-direct-db.sh  no-gh.sh  no-harness-explore.sh  no-local-memory.sh  post-compact.sh  post-edit-index.sh  post-edit-scip.sh  post-task-state.sh  pre-bash-grep.sh  pre-grep-recall.sh  pre-grep-scip.sh  pre-grep.sh  pre-read-sym.sh  pre-whoami-rewrite.sh  precompact.sh  recall-clamp.conf  recall-first.sh  session-end.sh  session-start.sh  setup-binary.sh  stop.sh  subagent-stop.sh  test-daemon-supervisor.sh  test-legion-covered.sh  test-legion-indexed.sh  test-lib.sh  test-no-gh.sh  test-no-harness-explore.sh  test-post-edit-scip.sh  test-pre-bash-grep.sh  (+11 more)
plugin/hooks/lib/: emit.sh  prelude.sh
plugin/hooks/tests/: testutil.sh
plugin/skills/legion-memory/: SKILL.md
plugin/skills/legion-pr-write/: SKILL.md
plugin/skills/legion-review/: SKILL.md
plugin/skills/legion-simplify/: SKILL.md
plugin/skills/legion-verify/: SKILL.md
plugin/tests/: test-bin-legion.sh  test-mcp-json.sh  test-setup-binary-path.sh
plugin/verbs/: default.toml
plugin/worksources/: github
schemas/: blueprint.schema.json  ecosystem.schema.json  journey.schema.json  painmatrix.schema.json  persona.schema.json  requirement.schema.json
scripts/: install-hooks.sh  preflight.sh  release.sh  sync-version.sh  test-release.sh  test-sync-version.sh
src/: autonomy.rs  board.rs  card_parse.rs  channel.rs  cluster.rs  css.rs  daemon.rs  db.rs  documents.rs  error.rs  etc.rs  finding_gate.rs  gate_registry.rs  gate_trust.rs  graph.rs  health.rs  identity_generate.rs  init.rs  inventory.rs  kanban.rs  main.rs  mcp.rs  mcp_notify.rs  mesh.rs  now.rs  pr_view.rs  pr_write.rs  pty.rs  recall.rs  reflect.rs  scip.rs  search.rs  serve.rs  signal.rs  simplify_check.rs  spec_gen.rs  stats.rs  status.rs  statusline.rs  surface.rs  (+13 more)
src/cli/: autonomy.rs  datadir.rs  document.rs  index_cmd.rs  issue.rs  kanban.rs  memory.rs  misc.rs  mod.rs  ops.rs  pr.rs  push.rs  schedule.rs  signal.rs  spec_gen.rs  util.rs  verify.rs  watch.rs
src/db/: audit.rs  autonomy.rs  board.rs  css_symbols.rs  documents.rs  findings.rs  health.rs  heartbeat.rs  inventory.rs  kanban.rs  mod.rs  module_edges.rs  quality_gates.rs  reflections.rs  replan.rs  schedules.rs  scip.rs  sessions.rs  stats.rs  statusline_samples.rs  sync.rs  testutil.rs  uncertainty.rs  wake.rs
src/kanban/: format.rs  mod.rs  reconcile.rs  state.rs
src/mcp/: log.rs  mod.rs  notifier.rs  tools.rs
src/uncertainty/: error.rs  mod.rs  storage.rs  types.rs
src/watch/: config.rs  gates.rs  locks.rs  mod.rs  signals.rs  spawn.rs  tracker.rs
src/worksource/: issues.rs  mod.rs  prs.rs
static/: app.js  index.html  style.css
tests/: hook_warnings.rs  integration.rs
tests/fixtures/: gitpress-developer.persona.json  rafters-developer-discovers.blueprint.json
tests/integration/: bullpen.rs  common.rs  css_symbols.rs  daemon_watch.rs  documents.rs  etc.rs  find_file.rs  governance.rs  index_telemetry.rs  inventory_freshness.rs  kanban.rs  main.rs  mcp.rs  memory.rs  mesh.rs  module_graph.rs  push.rs  serve.rs  spec_gen.rs  sym_tree.rs  task.rs  uncertainty.rs  usage.rs  whoami_generate.rs  worksource_pr.rs
