[package]
name = "legion"
version = "0.18.2"
edition = "2024"
description = "Agent specialization through deliberate practice"

[dependencies]
tantivy = "0.22"
rusqlite = { version = "0.34", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
directories = "5"
dirs = "5"
model2vec-rs = "0.1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
rust-embed = "8"
tower-http = { version = "0.6", features = ["cors"] }
mime_guess = "2"
tokio-stream = "0.1"
async-stream = "0.3"
toml = "0.8"
sysinfo = { version = "0.34", default-features = false, features = ["system", "component"] }
rlimit = "0.11"
wait-timeout = "0.2"

# SCIP code intelligence (#278+).
sha2 = "0.10"
scip = "0.7"
protobuf = "3"

# Multi-node sync via LAN broadcast. Published crate (not the git source):
# 0.4.0 carries the masterless multicast Gossip API + protocol v2. The old
# unpinned git dep was frozen at 0.2.1 (TCP-era) by the lockfile.
smugglr-core = { version = "0.4.0", default-features = false, features = ["native"] }
rand = "0.9"
hex = "0.4"
hostname = "0.4"

# PTY spawning for watch auto-wake (#486+). Subscription billing requires
# an interactive TTY -- portable-pty wraps native PTY on unix and ConPTY
# on Windows.
portable-pty = "0.9"

# libc pulls in only on unix for killpg in call_plugin_inner's timeout arm.
# Must stay AFTER all platform-independent deps -- TOML tables consume
# every key until the next header, so listing it mid-file would leak the
# cfg(unix) gate onto later deps and they would vanish on Windows.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
